[cs-ui] CSAlert - Fixed light variants failing contrast accessibility requirements

--- a/cs-ui-components/src/sass/_theme.scss
+++ b/cs-ui-components/src/sass/_theme.scss
@@ -104,7 +104,7 @@ $variables: (
 	--cs-alert-info-c: $cs-white,
 	--cs-alert-info-fill: $cs-white,
 	--cs-alert-info-light-bg: $cs-blue-light-2,
-	--cs-alert-info-light-c: $cs-blue-sf,
+	--cs-alert-info-light-c: $cs-blue-medium-3,
 	--cs-alert-info-light-fill: $cs-blue-sf,
 	--cs-alert-info-box: $cs-blue-sf,
 	--cs-alert-info-br: $cs-blue-sf,
@@ -114,13 +114,13 @@ $variables: (
 	--cs-alert-warning-box: $cs-orange-medium-1,
 	--cs-alert-warning-br: $cs-orange-medium-1,
 	--cs-alert-warning-light-bg: $cs-orange-light-1,
-	--cs-alert-warning-light-c: $cs-orange-medium-1,
+	--cs-alert-warning-light-c: $cs-orange-dark-1,
 	--cs-alert-warning-light-fill: $cs-orange-medium-1,
 	--cs-alert-error-bg: $cs-red-medium-2,
 	--cs-alert-error-c: $cs-white,
 	--cs-alert-error-fill: $cs-white,
 	--cs-alert-error-light-bg: $cs-red-light-1,
-	--cs-alert-error-light-c: $cs-red-medium-1,
+	--cs-alert-error-light-c: $cs-red-medium-2,
 	--cs-alert-error-light-fill: $cs-red-medium-1,
 	--cs-alert-error-box: $cs-red-medium-1,
 	--cs-alert-error-br: $cs-red-medium-1,
